testsuite/bsc.bugs/github/gh221/ZipCrash.bs.bsc-out.expected
checking package dependencies
compiling ZipCrash.bs
Error: "ZipCrash.bs", line 21, column 17: (T0013)
  Partially applied type synonym: `ZipCrash.Foo'
  The synonym expects 1 arguments but was used with 0 arguments.
